# phusycs

./: .cd  .cd.swp  .notes  .todo  CNAME  Cargo.toml  LICENSE  index.html  readme.md
css/: style.css
js/: audio-engine.js  edge.js  math-menu.js  particle.js  phusycs.js  script.js
src/: click.rs  configurator.rs  main.rs  particle.rs  physics.rs  select.rs
